adjustments for mac os

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,4 @@
 hcp.login.page.url=https://pro.housecallpro.com/pro/log_in
 chrome.driver.location=src/test/resources/drivers/chromedriver.exe
+chrome.mac.driver.location=src/test/resources/drivers/chromedriver
 edge.driver.location=src/test/resources/drivers/msedgedriver.exe
